--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+@font-face {
+  font-family: "Circle";
+  src: url("./fonts/Circe.otf");
+  /* Дополнительные свойства шрифта, если необходимо */
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus {
+    font-size: 16px;
+  }
+}
+
+body {
+  font-family: "Circe", sans-serif;
+  letter-spacing: 1px;
+  font-weight: 300;
+  background: white;
+}
+
 .App {
   text-align: center;
+  margin-top: 18px;
+  max-width: 560px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.primaryButton {
+  font-family: "Circe", sans-serif;
+  cursor: pointer;
+  padding: 8px 23px;
+  border-radius: 100px;
+  height: 48px;
+  width: 120px;
+  background: #c6007f;
   color: white;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 100;
+  border: none;
+  letter-spacing: 1px;
+  margin-top: 24px;
+  -webkit-tap-highlight-color: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.container:nth-child(n+1) {
+  margin-top: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
